--- a/src/css/landingpage.css
+++ b/src/css/landingpage.css
@@ -1,7 +1,13 @@
 .welcome {
-  height: 20vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
+  margin-top: 5rem;
+}
+
+.welcome p {
+  max-width: 20em;
+  margin-top: 1em;
 }
