--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,3 +1,16 @@
 body {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
+}
+
+a,
+a:visited {
+  color: black;
+  font-family: "Fira Code";
+  font-weight: bold;
+  text-decoration: none;
+  text-decoration-color: black;
+  border-bottom: 2px solid black;
+}
+a:hover {
+  opacity: 0.7;
 }
