--- a/src/css/global.css
+++ b/src/css/global.css
@@ -5,7 +5,7 @@ body {
 a,
 a:visited {
   color: black;
-  font-family: "Fira Code";
+  font-family: 'Fira Code';
   font-weight: bold;
   text-decoration: none;
   text-decoration-color: black;
@@ -13,4 +13,10 @@ a:visited {
 }
 a:hover {
   opacity: 0.7;
+}
+
+h1 {
+  text-decoration-line: underline;
+  text-decoration-thickness: 5px;
+  margin-bottom: 2rem;
 }
