--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -1,11 +1,57 @@
-@import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital@0;1&family=Fira+Code:wght@400;700&display=swap");
-
 body {
-  font-family: "Alegreya Sans", sans-serif;
+  font-family: 'Alegreya Sans', sans-serif;
 }
 
 code,
 h1,
 h2 {
-  font-family: "Fira Code", monospace;
+  font-family: 'Fira Code', monospace;
+}
+
+@font-face {
+  font-family: 'Alegreya Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local(''),
+    url('../fonts/alegreya-sans-v14-latin-regular.woff2') format('woff2'),
+    url('../fonts/alegreya-sans-v14-latin-regular.woff') format('woff'),
+    url('../fonts/alegreya-sans-v14-latin-regular.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Alegreya Sans';
+  font-style: italic;
+  font-weight: 400;
+  src: local(''),
+    url('../fonts/alegreya-sans-v14-latin-italic.woff2') format('woff2'),
+    url('../fonts/alegreya-sans-v14-latin-italic.woff') format('woff'),
+    url('../fonts/alegreya-sans-v14-latin-italic.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Alegreya Sans';
+  font-style: bold;
+  font-weight: 500;
+  src: local(''),
+    url('../fonts/alegreya-sans-v14-latin-500.woff2') format('woff2'),
+    url('../fonts/alegreya-sans-v14-latin-500.woff') format('woff'),
+    url('../fonts/alegreya-sans-v14-latin-500.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Fira Code';
+  font-style: normal;
+  font-weight: 500;
+  src: local(''), url('../fonts/fira-code-v10-latin-500.woff2') format('woff2'),
+    url('../fonts/fira-code-v10-latin-500.woff') format('woff'),
+    url('../fonts/fira-code-v10-latin-500.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Fira Code';
+  font-style: normal;
+  font-weight: 700;
+  src: local(''), url('../fonts/fira-code-v10-latin-700.woff2') format('woff2'),
+    url('../fonts/fira-code-v10-latin-700.woff') format('woff'),
+    url('../fonts/fira-code-v10-latin-700.ttf') format('truetype');
 }
