--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,6 @@
 @import 'reset.css';
 @import 'fonts.css';
 @import 'global.css';
-
+@import 'layout.css';
+@import 'navigation.css';
 @import 'landingpage.css';
