Improve responsive page layout

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,5 +2,5 @@
 @import 'fonts.css';
 @import 'global.css';
 @import 'layout.css';
-@import 'navigation.css';
+@import 'header.css';
 @import 'landingpage.css';
