--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,5 +1,11 @@
 body {
-  font-size: 1.3rem;
+  font-size: 1.1rem;
+}
+
+@media screen and (min-width: 1000px) {
+  body {
+    font-size: 1.3rem;
+  }
 }
 
 a,
