--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -1,9 +1,14 @@
-.page-layout {
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+main {
   padding: 2rem 1.5rem;
 }
 
 @media screen and (min-width: 1000px) {
-  .page-layout {
+  main {
     width: 60vw;
     margin: 0 auto;
     padding: 5rem 0;
