--- a/src/includes/header.html
+++ b/src/includes/header.html
@@ -3,6 +3,7 @@
   <nav>
     <ul>
       <li><a href="about.html">About</a></li>
+      <li><a href="content.html">Content</a></li>
       <li><a href="dummeFrage.html">Dumme Frage?!</a></li>
     </ul>
   </nav>
